# pyosr

./: .gitignore  AGENTS.md  README.md  config.toml  main.py  pyproject.toml
examples/: main.py
pyosr/: builders.py  loader.py  publisher.py  repository.py  router.py  types.py  utils.py
src/pyosr/: builders.py  config.py  loader.py  lookup.py  repository.py  rgeo.py  router.py  types.py  utils.py
tests/: test_load_config.py
