[project]
name = "pyosr"
version = "0.1.0"
description = "a simple route use dijistra algorithm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencage>=3.2.0",
    "osmium[docs]>=4.2.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rtree>=1.4.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pytest>=9.0.2",
]
